# TelegramForHarmony

./: .gitignore  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/services/: FileService.ets  GroupCallStreamSession.ets  LiveStreamBackgroundTask.ets  LiveStreamProbe.ets  StreamSegmentMath.ets  TgcallsGroupSession.ets  VideoRangeServer.ets  VideoStreamSession.ets  VoicePlayback.ets  VoiceRecorder.ets
entry/src/main/ets/store/: AppSettings.ets  CallsStore.ets  ChatActions.ets  ChatEntry.ets  ChatProfileStore.ets  ChatStore.ets  ContactsStore.ets  FolderApi.ets  FolderStore.ets  GlobalSearchStore.ets  GroupCallMessageStore.ets  GroupCallParticipantsStore.ets  InputSuggestions.ets  ListKey.ets  (+11 more)
entry/src/mock/: Libentry.mock.ets
entry/src/test/: AuthService.test.ets  ChatEntry.test.ets  ChatStore.test.ets  FileService.test.ets  FolderStore.test.ets  FormatMsgContent.test.ets  FormatTTL.test.ets  FormatUserStatus.test.ets  GroupCallApi.test.ets  GroupCallStreamSession.test.ets  LinkNav.test.ets  List.test.ets  ListKey.test.ets  LiveStreamStore.test.ets  MessageEntry.test.ets  MessageStore.test.ets  StreamSegmentMath.test.ets  TdClient.test.ets  UnreadCountStore.test.ets  UserStore.test.ets  formatPreview.test.ets  formatTime.test.ets
scripts/: build-tdlib.sh  build-tgcalls-ohos.sh  fetch-tdlib.sh  gen-creds.mjs  run-local-tests.sh
scripts/tgcalls/: README.md  ohos-webrtc-macos-host.patch  tg_owt-ohos.patch  tgcalls-avio-owned-buffer.patch  tgcalls-ohos.cmake  tgcalls-rtmp-audio-crackle.patch  tgcalls_ohos_bridge.cpp  tgcalls_ohos_local_video.cpp  tgcalls_ohos_local_video.h  tgcalls_ohos_platform.cpp
(+92 files in other folders)
